maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: unclosed character literal
  prendBiscuit()'
                ^Escaper:8: error: ';' expected but something found.
  prendBiscuit()'
                ^Escaper:11: error: ';' expected but '=' found.
def keepHandOnSideWall():Unit={
                             ^